# compact_sequence

./: Cargo.toml  README.md
.github/workflows/: compact_sequence.yml  healthcheck.yml
src/: errors.rs  file_extensions.rs  file_processing.rs  lib.rs  main.rs  mode.rs
src/encoders/: dna_to_ascii.rs  mod.rs  nucleotide_to_ascii.rs  rna_to_ascii.rs
src/processors/: directory_processing.rs  file_processing.rs  file_processor.rs  mod.rs  processor.rs
tests/: integration_tests.rs  lib.rs  nucleotide_to_ascii.rs
tests/test_data/test_expected_outputs/: test_2_output.txt
