[package]
name = "compact_sequence"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dependencies]
walkdir = "2.3"
rayon = "1.5"
lazy_static = "1.4"